# praticando-python

./: pyproject.toml
src/inserir_dados_postgresql/: conectar.py  inserir_dados.py  tempCodeRunnerFile.py
src/inserir_dados_postgresql/dados/: aluno_curso.csv  cursos.csv  nome_idade.csv
