[project]
name = "python-praticando"
version = "0.1.0"
description = ""
authors = [
    {name = "Maria Eduarda",email = "mariaeducorrea2502@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "python_praticando", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
